--- a/Demo/pubspec.yaml
+++ b/Demo/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   camera: ^0.10.5+2
   intl: ^0.18.1
   file_picker: ^4.3.2
+  permission_handler: ^10.3.0
+  pdf: ^3.10.4
 
 
 
@@ -75,7 +77,7 @@ flutter:
       fonts:
        - asset: fonts/roboto/Roboto-Regular.ttf
   assets:
-    - assets/email.docx
+    - assets/failureReportTemplat.docx
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
